tests/baselines/reference/crashIntypeCheckInvocationExpression.errors.txt
crashIntypeCheckInvocationExpression.ts line 6 col 28: error TS2095: Could not find symbol 'task'.
crashIntypeCheckInvocationExpression.ts line 8 col 18: error TS2095: Could not find symbol 'path'.
crashIntypeCheckInvocationExpression.ts line 9 col 24: error TS2158: Untyped function calls may not accept type arguments.
crashIntypeCheckInvocationExpression.ts line 10 col 50: error TS2095: Could not find symbol 'moduleType'.